Stylesheets upgraded to use SCSS. Installs Sass.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=yes" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="/vendor/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/pygment_trac.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/site.css">
   </head>
 
   <body> 
