--- a/stylesheets/scss/_pygment.scss
+++ b/stylesheets/scss/_pygment.scss
@@ -1,3 +1,6 @@
+/***********************
+ * _pygments.scss file *
+ ***********************/
 .highlight .hll { background-color: #ffffcc }
 .highlight  { background: #f0f3f3; }
 .highlight .c { color: #0099FF; font-style: italic } /* Comment */
