--- a/stylesheets/scss/blog.scss
+++ b/stylesheets/scss/blog.scss
@@ -1,29 +1,26 @@
-/*******************
- * _blog.scss file *
- *******************
 
-______  __                       ______ ________________
-___  / / /___________ ______________  /____(_)__  /__  /
-__  /_/ /_  _ \_  __ `__ \__  __ \_  __ \_  /__  /__  / 
-_  __  / /  __/  / / / / /_  /_/ /  / / /  / _  / _  /  
-/_/ /_/  \___//_/ /_/ /_/_  .___//_/ /_//_/  /_/  /_/   
-                         /_/                            
-
+/*
+__/\\\________/\\\___________________________________________________/\\\________________/\\\\\\_____/\\\\\\____        
+ _\/\\\_______\/\\\__________________________________________________\/\\\_______________\////\\\____\////\\\____       
+  _\/\\\_______\/\\\______________________________________/\\\\\\\\\__\/\\\__________/\\\____\/\\\_______\/\\\____      
+   _\/\\\\\\\\\\\\\\\_____/\\\\\\\\_____/\\\\\__/\\\\\____/\\\/////\\\_\/\\\_________\///_____\/\\\_______\/\\\____     
+    _\/\\\/////////\\\___/\\\/////\\\__/\\\///\\\\\///\\\_\/\\\\\\\\\\__\/\\\\\\\\\\___/\\\____\/\\\_______\/\\\____    
+     _\/\\\_______\/\\\__/\\\\\\\\\\\__\/\\\_\//\\\__\/\\\_\/\\\//////___\/\\\/////\\\_\/\\\____\/\\\_______\/\\\____   
+      _\/\\\_______\/\\\_\//\\///////___\/\\\__\/\\\__\/\\\_\/\\\_________\/\\\___\/\\\_\/\\\____\/\\\_______\/\\\____  
+       _\/\\\_______\/\\\__\//\\\\\\\\\\_\/\\\__\/\\\__\/\\\_\/\\\_________\/\\\___\/\\\_\/\\\__/\\\\\\\\\__/\\\\\\\\\_ 
+        _\///________\///____\//////////__\///___\///___\///__\///__________\///____\///__\///__\/////////__\/////////__
 
 Greg Hemphill's Blog
 */
 
-/* scaffolding
-   =========== */
-body { padding-top: 70px; } /* for Navbar */
+/* scaffolding */
+
 
 
 /* Typography
-   ========== */
+   ---------- */
 
-/* Libre Baskerville 
-   -----------------
-   from Font Squirrel http://www.fontsquirrel.com/fonts/libre-baskerville */
+/* Libre Baskerville from Font Squirrel http://www.fontsquirrel.com/fonts/libre-baskerville */
 @font-face {
   font-family: 'LibreBaskervilleRegular';
   src: url('/vendor/fonts/libre_baskerville/LibreBaskerville-Regular-webfont.eot');
@@ -91,15 +88,9 @@ em strong, em b, em .bold,
 /* Headings 
    -------- */
 
-
-article {
-  h1 {
-    font-weight: bold;
-  }
-}
-
 /* Exposed Markdown inspired by Mark Otto's blog http://markdotto.com */
 article {
+
 
   h1, h2, h3, h4, h5, h6 {
     position: relative;
@@ -116,12 +107,7 @@ article {
     top: auto;
     color: #f4f4f4;
     display: none;
-    @media (min-width: 768px) {
-      display: inline;
-    }
   }
-
-  
 
   h1 { /* 38/41 */
     font-size: 4.6rem;
@@ -251,12 +237,14 @@ article .title {
 /* Responsive
    ---------- */
 
-
-/* Components
-   ========== */
-
-/* Navbar
-   ------ */
-.navbar { 
-  opacity: 0.9; 
+@media (min-width: 768px) {
+  h1:before,
+  h2:before,
+  h3:before,
+  h4:before,
+  h5:before,
+  h6:before {
+    display: inline;
+  }
 }
+
