--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <header class="site_header">
-  <h4>{{site.name}}</h4>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-    </ul>
-  </nav>
+  <div class="navbar navbar-fixed-top">
+	  <a class="navbar-brand" href="#">Greg Hemphill's Blog</a>
+	  <ul class="nav navbar-nav">
+	    <li class="active"><a href="#">Latest</a></li>
+	    <li><a href="archive">Archive</a></li>
+	    <li><a href="about">About</a></li>
+	  </ul>
+	</div>
 </header>
