bunch of layout stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
     <title>{{ page.title }}</title>
     <meta name="description" content="Greg Hemphill's Blog" />
     <meta name="viewport" content="width=device-width,user-scalable=yes" />
-    
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/vendor/data_tables/data_tables_for_bootstrap.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/site.css">
   </head>
 
@@ -17,7 +18,7 @@
       {{ content }}
       {% include footer.html %}
     </div>
-
+    
     {% include scripts.html %}
 
     {% include analytics.html %}
