--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,34 @@
+<!--<header class="site_header">-->
+  <!--<div class="navbar navbar-fixed-top">-->
+	  <!--<a class="navbar-brand" href="#">Greg Hemphill's Blog</a>-->
+	  <!--<ul class="nav navbar-nav">-->
+	    <!--<li class="active"><a href="#">Latest</a></li>-->
+	    <!--<li><a href="archive">Archive</a></li>-->
+	    <!--<li><a href="about">About</a></li>-->
+	  <!--</ul>-->
+	<!--</div>-->
+<!--</header>-->
 <header class="site_header">
-  <div class="navbar navbar-fixed-top">
-	  <a class="navbar-brand" href="#">Greg Hemphill's Blog</a>
-	  <ul class="nav navbar-nav">
-	    <li class="active"><a href="#">Latest</a></li>
-	    <li><a href="archive">Archive</a></li>
-	    <li><a href="about">About</a></li>
-	  </ul>
-	</div>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <!-- We use the fluid option here to avoid overriding the fixed width of a normal container within the narrow content columns. -->
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-links">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Greg Hemphill's Blog</a>
+      </div>
+  
+      <div class="collapse navbar-collapse" id="main-links">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/">Latest</a></li>
+          <li><a href="/archive">Archive</a></li>
+          <li><a href="/about">About</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div>
+  </nav>
 </header>
