--- a/stylesheets/scss/site.scss
+++ b/stylesheets/scss/site.scss
@@ -1,6 +1,22 @@
 // SCSS Manifest File
 // This file 
+/******************
+ * site.scss file *
+ ******************
+
+______  __                       ______ ________________
+___  / / /___________ ______________  /____(_)__  /__  /
+__  /_/ /_  _ \_  __ `__ \__  __ \_  __ \_  /__  /__  / 
+_  __  / /  __/  / / / / /_  /_/ /  / / /  / _  / _  /  
+/_/ /_/  \___//_/ /_/ /_/_  .___//_/ /_//_/  /_/  /_/   
+                         /_/                            
+
+
+Greg Hemphill's Blog
+
+*/
+
 @import "../../vendor/bootstrap/css/bootstrap.css";
-@import "_pygment";
 @import "../../vendor/data_tables/data_tables_for_bootstrap.css";
+@import "_pygment";
 @import "_blog";
