--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -1,5 +1,18 @@
-@import url(../../vendor/bootstrap/css/bootstrap.css);
-@import url(../../vendor/data_tables/data_tables_for_bootstrap.css);
+/******************
+ * site.scss file *
+ ******************
+
+______  __                       ______ ________________
+___  / / /___________ ______________  /____(_)__  /__  /
+__  /_/ /_  _ \_  __ `__ \__  __ \_  __ \_  /__  /__  / 
+_  __  / /  __/  / / / / /_  /_/ /  / / /  / _  / _  /  
+/_/ /_/  \___//_/ /_/ /_/_  .___//_/ /_//_/  /_/  /_/   
+                         /_/                            
+
+
+Greg Hemphill's Blog
+
+*/
 /***********************
  * _pygments.scss file *
  ***********************/
@@ -510,4 +523,4 @@ article .title {
 /* Navbar
    ------ */
 .navbar {
-  opacity: 0.9; }
+  opacity: 0.95; }
