--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<!--<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>-->
+<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 <script src="/vendor/data_tables/jquery.dataTables.min.js"></script>
 <script src="/vendor/data_tables/data_tables_for_bootstrap.js"></script>
