--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -1,3 +1,5 @@
+@import url(../../vendor/bootstrap/css/bootstrap.css);
+@import url(../../vendor/data_tables/data_tables_for_bootstrap.css);
 /******************
  * site.scss file *
  ******************
@@ -355,11 +357,29 @@ body {
   font-weight: normal;
   font-style: normal; }
 
+html {
+  font-size: 8px; }
+  @media (min-width: 480px) {
+    html {
+      font-size: 9px; } }
+  @media (min-width: 768px) {
+    html {
+      font-size: 10px; } }
+
 body {
   /* 14/20 */
   font-size: 1.8rem;
   line-height: 2.8rem;
   font-family: 'LibreBaskervilleRegular', 'Georgia Pro', georgia, serif; }
+  @media (min-width: 480px) {
+    body {
+      line-height: 2.9rem; } }
+  @media (min-width: 768px) {
+    body {
+      line-height: 3.0rem; } }
+
+p, li {
+  margin-top: 1.5rem; }
 
 b, strong, .bold {
   font-weight: normal;
@@ -412,7 +432,8 @@ article h6:before {
       display: inline; } }
 article h1 {
   /* 38/41 */
-  font-size: 4.6rem; }
+  font-size: 4.6rem;
+  line-height: 5.6rem; }
 article h1:before {
   content: "#";
   left: -1.0em; }
