About me page, footer & more

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,14 @@
 <footer class="site_footer">
+  <p class="by_line">by <span class="author"><a href="/about/">Greg Hemphill</a></span></p>
   <nav>
   	<ul>
       <li><a href="http://twitter.com/Agent_G">@Agent_G on Twitter</a></li>
       <li><a href="http://github.com/hemphill">Hemphill at GitHub</a></li>
-  	</ul>
+      <li><a href="http://instagram.com/greghemphill">GregHemphill at Instagram</a></li>
+      <li><a href="https://www.facebook.com/greghemphill">GregHemphill on FaceBook</a></li>
+      <li><a href="https://www.flickr.com/photos/28447323@N07/">MrGHemp on Flickr</a></li>
+      <li><a href="https://foursquare.com/user/116334">Stalk me on Foursquare</a></li>
+      <li><a href="http://agentg.tumblr.com/">AgentG on Tumblr</a></li>
+    </ul>
   </nav>
 </footer>
