--- a/stylesheets/scss/_blog.scss
+++ b/stylesheets/scss/_blog.scss
@@ -281,3 +281,75 @@ article .title {
 .navbar { 
   opacity: 0.95; 
 }
+
+/* Footer 
+   ------ */
+
+footer {
+  margin: 0;
+  padding: 20px;
+  border-top: 1px solid #036;
+  background: #4A525A;
+  text-align: center;
+}
+
+footer ul {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+footer li {
+  margin: 20px;
+  padding: 0;
+  list-style: none;
+  display: inline-block;
+}
+
+footer a, 
+footer p {
+  color: #999;
+}
+
+footer a:hover {
+  color: #9cf;
+}
+footer a {
+  font-size: 1.5rem;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;  
+}
+
+/* Home Page
+   ========= */
+.articles_index {
+  @extend article;
+}
+.more_articles {
+  margin: 0;
+  padding: 0;
+}
+.more_articles li {
+  margin: 5px;
+  padding: 0;
+  list-style: none;
+}
+
+
+
+/* About Page
+   ========== */
+.about_picture {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 320px;
+  @media (min-width: 480px) {
+    margin: 20px auto;
+    float: right;
+    width: 50%;
+    border-radius: 5px;
+  }
+  @media (min-width: 768px) {
+    margin: 20px;
+    width: 320px;
+  }
+}
